--- a/themes/hugo-fresh/layouts/partials/plannedfunctions.html
+++ b/themes/hugo-fresh/layouts/partials/plannedfunctions.html
@@ -1,12 +1,11 @@
-{{- $section1 := .Site.Params.section1 }}
-{{- $title    := index $section1 "title" }}
-{{- $subtitle := index $section1 "subtitle" }}
-{{- $tiles    := index $section1 "tiles" }}
+{{- $plannedfunctions := .Site.Params.plannedfunctions }}
+{{- $title    := index $plannedfunctions "title" }}
+{{- $subtitle := index $plannedfunctions "subtitle" }}
+{{- $tiles    := index $plannedfunctions "tiles" }}
 <section class="section section-feature-grey is-medium">
   <div class="container">
     <div class="title-wrapper has-text-centered">
       <h2 class="title is-2">{{ $title }}</h2>
-      <h3 class="subtitle is-5 is-muted">{{ $subtitle }}</h3>
       <div class="divider is-centered"></div>
     </div>
 
@@ -18,14 +17,11 @@
             <div class="card-title">
               <h4>{{ .title }}</h4>
             </div>
-            <div class="card-icon">
+            <div class="p-3 m-3 card-icon">
                 <img src="{{ printf "/images/illustrations/icons/%s.svg" .icon | relURL }}">
             </div>
             <div class="card-text">
                 <p>{{ .text }}</p>
-            </div>
-            <div class="card-action">
-              <a href="{{ .url }}" class="button btn-align-md accent-btn raised">{{ .buttonText }}</a>
             </div>
           </div>
         </div>
